--- a/footballsim/pom.xml
+++ b/footballsim/pom.xml
@@ -35,6 +35,15 @@
             <artifactId>hibernate-core</artifactId>
             <version>6.6.14.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.45.2.0</version> 
+        </dependency>
+        <dependency>
+             <groupId>org.slf4j</groupId>
+             <artifactId>slf4j-api</artifactId>
+             <version>2.0.13</version> </dependency>
     </dependencies>
 
     <build>
